--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       - redis
     ports:
       - "5000:5000"
+    env_file:
+      - .env
   
   # Celery Worker (Handles Background Tasks)
   celery:
@@ -29,6 +31,8 @@ services:
     depends_on:
       - base
       - redis
+    env_file:
+      - .env
   
   # MySQL Database
   db:
@@ -57,7 +61,7 @@ services:
     depends_on:
       - backend
     ports:
-      - "80:80"
+      - "3000:80"
 
 volumes:
   db_data:
